# hello_imgui_experiments

./: CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: ci-emscripten.yml  ci-linux.yml  ci-mac.yml  ci-windows.yml  release.yml
assets/shaders/: clear.fragment  clear.vertex  colorspaces.glsl  colorspaces.metal  gradient-shader_frag.glsl  gradient-shader_vert.glsl  gradient-shader_vert.metal  image-shader_frag.glsl  image-shader_frag.metal  image-shader_vert.glsl  image-shader_vert.metal  test-shader.frag  test-shader.fragment  test-shader.vert  test-shader.vertex
include/: app.h  common.h  renderpass.h  shader.h  texture.h
src/: app.cpp  common.cpp  renderpass_gl.cpp  renderpass_metal.mm  shader.cpp  shader_gl.cpp  shader_metal.mm  texture.cpp  texture_gl.cpp  texture_metal.mm
